demo image and requirements.txt file

--- a/train_CNN.ipynb
+++ b/train_CNN.ipynb
@@ -30,7 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_path = \"G://My Drive//dataset//split_data\""
+    "# dataset_path = \"G://My Drive//dataset//split_data\"\n",
+    "dataset_path = \"./split_dataset\""
    ]
   },
   {
